--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,7 @@
 spark-host=0.0.0.0
 spark-port=8080
-storage=mongodb
-storage-plaintext-path=passwords.txt
+storage=plaintext
+storage-plaintext-path=/var/tmp/token-dispenser/passwords.txt
 mongodb-host=192.168.1.3
 mongodb-port=27017
 mongodb-username=yalp
